# supercodemode

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
datasets/templates/: cloudflare_search_execute.jsonl  routing_mix.jsonl  two_tool_minimal.jsonl
docs/: index.md
docs/getting-started/: first-run.md  index.md  install.md  teen-guide.md
docs/guides/: cloudflare-http.md  examples.md  from-demo-to-real-workflow.md  gemini-optimization.md  gepa-adapter.md  index.md  local-docker.md
docs/operations/: doctor.md  index.md  observability.md  troubleshooting.md
examples/: README.md  mcp_client_demo.py  optimize_cloudflare_http.py  optimize_gemini_flash.py  optimize_mcp_cloudflare.py  optimize_mcp_stdio.py  showcase_http.py  showcase_mcp_cloudflare.py  showcase_mcp_stdio.py  showcase_static.py
getting-started/: index.html
getting-started/first-run/: index.html
getting-started/install/: index.html
getting-started/teen-guide/: index.html
guides/: index.html
guides/cloudflare-http/: index.html
guides/examples/: index.html
guides/from-demo-to-real-workflow/: index.html
guides/gemini-optimization/: index.html
guides/gepa-adapter/: index.html
operations/: index.html
scripts/: sync_gepa_vendor.sh
search/: search_index.json
stylesheets/: extra.css
supercodemode/: __init__.py  cli.py  common.py  doctor.py  engine.py  env.py  executors.py  io_utils.py  mcp_client_demo.py  observability.py  runners.py
(+6 files in other folders)
